fix menu collapsed and Expense route

--- a/app/sass/icons.scss
+++ b/app/sass/icons.scss
@@ -10,7 +10,7 @@
   font-weight: normal;
   font-style: normal;
   font-size: 24px !important;
-  display: inline-block;
+  //display: inline-block;
   line-height: 1;
   text-transform: none;
   letter-spacing: normal;
